# media-purger

./: Cargo.toml  README.md  justfile  prek.toml
.github/workflows/: release.yml
src/: main.rs
