[package]
name = "media-purger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5", features = ["env", "derive"] }
crossterm = "0.28"
dotenvy = "0.15.7"
ratatui = "0.29"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
